# Universal-Sysmon

./: .gitignore  BUILD.md  README.md  pyproject.toml
sysmonitor/: __init__.py  __main__.py
